# verbose-umbrella

./: .drone.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  hadolint.yml  rust.yml  trivy.yml  yamllint.yml
src/: line.rs  main.rs
